--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,8 @@ main: com.github.yuttyann.custommessage.Main
 version: 5.3
 author: yuttyann44581
 website: http://ch.nicovideo.jp/yuttyann44581/blomaga/ar810622
+softdepend: [ProtocolLib]
+
 commands:
   custommessage:
   rules:
