--- a/src/main/resources/config_s-jis.yml
+++ b/src/main/resources/config_s-jis.yml
@@ -39,7 +39,7 @@ Saturday: '土'
 #&で色を指定できます。ColorCodeListのURL参照
 #%yearで現在の年を取得します。
 #%monthで現在の月を取得します。
-#%dayで現在の日を取得します。
+#%dayで現在の日にちを取得します。
 #%hourで現在の時を取得します。
 #%minuteで現在の分を取得します。
 #%secondで現在の秒を取得します。
