--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: CustomMessage
 main: com.github.yuttyann.custommessage.Main
-version: 5.9
+version: 6.0
 author: yuttyann44581
-website: http://ch.nicovideo.jp/yuttyann44581/blomaga/ar810622
+website: http://file.yuttyann44581.net/
 softdepend: [ProtocolLib]
 
 commands:
@@ -25,3 +25,8 @@ commands:
     description: Sends a private message to the givenplayer
     usage: /<command> <player> <message>
     aliases: [w, msg]
+  title:
+    description: タイトルコマンド
+    usage: |
+           /<command> <player> <title> <subtitle> - 指定したプレイヤーにタイトルを表示します。
+           /<command> tab <player> <header> <footer> - 指定したプレイヤーにタブタイトルを表示します。
