--- a/src/main/resources/config_s-jis.yml
+++ b/src/main/resources/config_s-jis.yml
@@ -1,4 +1,4 @@
-#CustomMessage v6.2 Config
+#CustomMessage v6.3 Config
 #CompliantVersion 1.7.2～1.10
 #ColorCodeList http://ess.khhq.net/mc/
 #SoundList http://www.yuttyann44581.net/uploads/SoundList/
@@ -109,28 +109,54 @@ SoundTypes:
   KickBroadcastSoundType: player
   AFKBroadcastSoundType: player
 
-#殺害メッセージの設定
-#&で色を指定できます。ColorCodeListのURL参照
-#%deaderで殺害されたプレイヤーを取得します。
-#%killerで殺害したプレイヤーを取得します。
-#%weaponで殺害したプレイヤーの武器を取得します。
-#%timeでTimeに設定した時刻を取得します。
-# trueで有効 falseで無効
-#初期: false
-PlayerKillMessage:
-  Enable: false
-  NullMessage: '素手'
-  Message: '&c%deaderは%killerに%weaponで殺害されました'
-
 #死亡メッセージの設定
 #&で色を指定できます。ColorCodeListのURL参照
-#%deaderで死亡したプレイヤーを取得します。
+#%deaderで殺害されたプレイヤーを取得します。
+#%killerで殺害したプレイヤーを取得します。(殺害メッセージのみ使用可能です。)
+#%weaponで殺害したプレイヤーの武器を取得します。(Playerのみ使用可能です。)
 #%timeでTimeに設定した時刻を取得します。
 # trueで有効 falseで無効
 #初期: false
-PlayerDeathMessage:
+DeathMessage:
   Enable: false
-  Message: '&c%deaderは死んでしまった'
+  Weapon:
+    NullMessage: '素手'
+  Messages:
+    Drowning: '&c%deaderは死亡しました。死因: 水'
+    Fire: '&c%deaderは死亡しました。死因: 炎'
+    Fall: '&c%deaderは死亡しました。死因: 落下'
+    Void: '&c%deaderは死亡しました。死因: 奈落'
+    Lava: '&c%deaderは死亡しました。死因: 溶岩'
+    Magic: '&c%deaderは死亡しました。死因: 魔法'
+    Suffocation: '&c%deaderは死亡しました。死因: 窒息'
+    Projectile: '&c%deaderは死亡しました。死因: 飛び道具'
+    Starvation: '&c%deaderは死亡しました。死因: 飢餓'
+    Withered: '&c%deaderは死亡しました。死因: ウィザー'
+    Explosion: '&c%deaderは死亡しました。死因: 爆発'
+    Player: '&c%deaderは%killerに%weaponで殺害されました。'
+    ZombiePigman: '&c%deaderはゾンビピッグマンに殺害されました。'
+    Zombie: '&c%deaderはゾンビに殺害されました。'
+    Husk: '&c%deaderはハスクに殺害されました。'
+    CaveSpider: '&c%deaderは洞窟グモに殺害されました。'
+    Spider: '&c%deaderはクモに殺害されました。'
+    SilverFish: '&c%deaderはシルバーフィッシュに殺害されました。'
+    Slime: '&c%deaderはスライムに殺害されました。'
+    MagmaCube: '&c%deaderはマグマキューブに殺害されました。'
+    EnderMite: '&c%deaderはエンダーマイトに殺害されました。'
+    Enderman: '&c%deaderはエンダーマンに殺害されました。'
+    EnderDragon: '&c%deaderはエンダードラゴンに殺害されました。'
+    IronGolem: '&c%deaderはアイアンゴーレムに殺害されました。'
+    Wolf: '&c%deaderはオオカミに殺害されました。'
+    PolarBear: '&c%deaderはシロクマに殺害されました。'
+    Giant: '&c%deaderはジャイアントに殺害されました。'
+    Guardian: '&c%deaderはガーディアンに殺害されました。'
+    Wither: '&c%deaderはウィザーに殺害されました。'
+    Witch: '&c%deaderはウィッチに殺害されました。'
+    Blaze: '&c%deaderはブレイズに殺害されました。'
+    Ghast: '&c%deaderはガストに殺害されました。'
+    Stray: '&c%deaderはストレイに殺害されました。'
+    Skeleton: '&c%deaderはスケルトンに殺害されました。'
+    WitherSkeleton: '&c%deaderはウィザースケルトンに殺害されました。'
 
 #ログイン/ログアウトメッセージの設定
 #%playerでプレイヤーを取得します。
@@ -140,9 +166,16 @@ PlayerDeathMessage:
 #初期: true
 PlayerJoinQuitMessage:
   Enable: true
-  FirstJoinMssage: '&e%playerさんが初めてサーバーに参加しました'
-  JoinMessage: '&e%playerさんがサーバーに参加しました'
-  QuitMessage: '&e%playerさんがサーバーから退出しました'
+  FirstJoinMssage: '&e%playerさんが初めてサーバーに参加しました。'
+  JoinMessage: '&e%playerさんがサーバーに参加しました。'
+  QuitMessage: '&e%playerさんがサーバーから退出しました。'
+
+#ログインアイテム配布の設定
+#Kits導入時のみ動作します。
+#キット名を指定することでログイン時に配布されます。
+FirstJoinItem:
+  Enable: false
+  KitName: Hunter
 
 #プレイヤーチャットの設定
 #&で色を指定できます。ColorCodeListのURL参照
@@ -183,8 +216,8 @@ PlayerKickMessage:
 #初期: false
 PlayerLoginKickMessage:
   Enable: false
-  BanMessage: '&cBANされているためログインできません'
-  WhiteListMessage: 'ホワイトリストが有効になっているためログインできません'
+  BanMessage: '&cBANされているためログインできません。'
+  WhiteListMessage: 'ホワイトリストが有効になっているためログインできません。'
 
 #ログイン時のメッセージの設定
 #プレイヤーのログイン時ログインメッセージとは別にメッセージを表示できます。
@@ -196,7 +229,7 @@ PlayerLoginKickMessage:
 PlayerLoginMessage:
   Enable: true
   Message:
-  - 'アップデート情報: てすと'
+  - 'アップデート情報: テストです。'
 
 #サーバールールの設定
 #&で色を指定できます。ColorCodeListのURL参照
