--- a/src/main/resources/config_s-jis.yml
+++ b/src/main/resources/config_s-jis.yml
@@ -111,8 +111,9 @@ SoundTypes:
 
 #死亡メッセージの設定
 #&で色を指定できます。ColorCodeListのURL参照
+#%killerのエンティティの名前を取得する機能はプレイヤー以外の場合1.8以降でないと機能しません。
 #%deaderで殺害されたプレイヤーを取得します。
-#%killerで殺害したプレイヤーを取得します。(殺害メッセージのみ使用可能です。)
+#%killerで殺害したエンティティを取得します。(殺害メッセージのみ使用可能です。)
 #%weaponで殺害したプレイヤーの武器を取得します。(Playerのみ使用可能です。)
 #%timeでTimeに設定した時刻を取得します。
 # trueで有効 falseで無効
